...

        <include layout="@layout/dialog_add_subject"
                 app:viewModel="@{addSubjectViewModel}"
                 android:visibility="invisible"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="@dimen/space_s"
                android:layout_marginEnd="@dimen/space_s"
                android:src="@drawable/ic_plus"
...
